--- a/wordpress/autoscaling.yaml
+++ b/wordpress/autoscaling.yaml
@@ -71,7 +71,7 @@ resources:
       min_size: 1
       max_size: 3
       resource:
-        type: lb_server.yaml
+        type: https://raw.githubusercontent.com/gcharot/heat/master/wordpress/lb_server.yaml
         properties:
           flavor: {get_param: flavor}
           image: {get_param: image}
@@ -132,18 +132,6 @@ resources:
       port_id: {get_attr: [pool, vip, port_id]}
 
 outputs:
-  scale_up_url:
-    description: >
-      This URL is the webhook to scale up the autoscaling group.  You
-      can invoke the scale-up operation by doing an HTTP POST to this
-      URL; no body nor extra headers are needed.
-    value: {get_attr: [web_server_scaleup_policy, alarm_url]}
-  scale_dn_url:
-    description: >
-      This URL is the webhook to scale down the autoscaling group.
-      You can invoke the scale-down operation by doing an HTTP POST to
-      this URL; no body nor extra headers are needed.
-    value: {get_attr: [web_server_scaledown_policy, alarm_url]}
   pool_ip_address:
     value: {get_attr: [pool, vip, address]}
     description: The IP address of the load balancing pool
@@ -156,24 +144,4 @@ outputs:
     description: >
       This URL is the "external" URL that can be used to access the
       Wordpress site.
-  ceilometer_query:
-    value:
-      str_replace:
-        template: >
-          ceilometer statistics -m cpu_util
-          -q metadata.user_metadata.stack=stackval -p 600 -a avg
-        params:
-          stackval: { get_param: "OS::stack_id" }
-    description: >
-      This is a Ceilometer query for statistics on the cpu_util meter
-      Samples about OS::Nova::Server instances in this stack.  The -q
-      parameter selects Samples according to the subject's metadata.
-      When a VM's metadata includes an item of the form metering.X=Y,
-      the corresponding Ceilometer resource has a metadata item of the
-      form user_metadata.X=Y and samples about resources so tagged can
-      be queried with a Ceilometer query term of the form
-      metadata.user_metadata.X=Y.  In this case the nested stacks give
-      their VMs metadata that is passed as a nested stack parameter,
-      and this stack passes a metadata of the form metering.stack=Y,
-      where Y is this stack's ID.
 
