--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -28,6 +28,6 @@ resources:
   member:
     type: OS::Neutron::PoolMember
     properties:
-      pool_id: {get_param: pool_id}
+      pool_id: { get_resource: pool }
       address: {get_attr: [server, first_address]}
       protocol_port: 80
