--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -25,9 +25,9 @@ resources:
       key_name: {get_param: key_name}
       user_data: {get_param: user_data}
       user_data_format: RAW
-  member:
-    type: OS::Neutron::PoolMember
-    properties:
-      pool_id: { get_resource: pool }
-      address: {get_attr: [server, first_address]}
-      protocol_port: 80
+#  member:
+#    type: OS::Neutron::PoolMember
+#    properties:
+#      pool_id: {get_param: pool_id}
+#      address: {get_attr: [server, first_address]}
+#      protocol_port: 80
