--- a/wordpress/autoscaling.yaml
+++ b/wordpress/autoscaling.yaml
@@ -136,7 +136,9 @@ resources:
       monitors: [{get_resource: monitor}]
       subnet_id: {get_resource: my_subnet}
       lb_method: ROUND_ROBIN
-      vip: {"session_persistence" : {type: SOURCE_IP}, "subnet": { get_resource: my_subnet }, "name": my_vip, "address": 10.0.0.42, "protocol_port": 80, "description": my_vip}
+      vip:
+        protocol_port: 80
+      #vip: {"session_persistence" : {type: SOURCE_IP}, "subnet": { get_resource: my_subnet }, "name": my_vip, "address": 10.0.0.42, "protocol_port": 80, "description": my_vip}
 
   lb:
     type: OS::Neutron::LoadBalancer
