--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -10,9 +10,9 @@ parameters:
   flavor:
     type: string
     description: flavor used by the servers
-  pool_id:
-    type: string
-    description: Pool to contact
+#  pool_id:
+#    type: string
+#    description: Pool to contact
   user_data:
     type: string
     description: Server user_data
