--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -25,6 +25,8 @@ resources:
       key_name: {get_param: key_name}
       user_data: {get_param: user_data}
       user_data_format: RAW
+      networks: 
+        - network: { get_resource: my_network }
 #  member:
 #    type: OS::Neutron::PoolMember
 #    properties:
