--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -13,9 +13,9 @@ parameters:
 #  pool_id:
 #    type: string
 #    description: Pool to contact
-  user_data:
-    type: string
-    description: Server user_data
+#  user_data:
+#    type: string
+#    description: Server user_data
 resources:
   server:
     type: OS::Nova::Server
@@ -25,8 +25,6 @@ resources:
       key_name: {get_param: key_name}
       user_data: {get_param: user_data}
       user_data_format: RAW
-      networks: 
-        - network: { get_resource: my_network }
 #  member:
 #    type: OS::Neutron::PoolMember
 #    properties:
