test autoscale no net

--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -23,7 +23,7 @@ resources:
       flavor: {get_param: flavor}
       image: {get_param: image}
       key_name: {get_param: key_name}
-      user_data: {get_param: user_data}
+      #user_data: {get_param: user_data}
       user_data_format: RAW
 #  member:
 #    type: OS::Neutron::PoolMember
