test autoscale with  net

--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -27,7 +27,7 @@ resources:
       image: {get_param: image}
       key_name: {get_param: key_name}
       networks: 
-        - network: { get_resource: my_network }
+        - network: { get_param: my_network }
       #user_data: {get_param: user_data}
       user_data_format: RAW
 #  member:
