--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -13,9 +13,9 @@ parameters:
     type: string
     description: flavor used by the servers
     default: m1.small
-#  my_network:
-#    type: string
-#    description: subnet to use
+  net_id:
+    type: string
+    description: subnet to use
   pool_id:
     type: string
     description: Pool to contact
