test autoscale with  net

--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -30,8 +30,8 @@ resources:
       image: {get_param: image}
       key_name: {get_param: key_name}
       networks: 
-        #- network: { get_param: my_network }
-        - network: "front"
+        - network: { get_param: net_id }
+        #- network: "front"
       #user_data: {get_param: user_data}
       user_data_format: RAW
   member:
