remove user_data_format

--- a/wordpress/lb_server.yaml
+++ b/wordpress/lb_server.yaml
@@ -30,7 +30,7 @@ resources:
       networks: 
         - network: { get_param: net_id }
       user_data: {get_param: user_data}
-      user_data_format: RAW
+      #user_data_format: RAW
   member:
     type: OS::Neutron::PoolMember
     properties:
