--- a/wordpress/wordpress_autoscale.yml
+++ b/wordpress/wordpress_autoscale.yml
@@ -21,7 +21,7 @@ parameters:
 
   network_cidr:
     type: string
-    description: Name of the deployed network
+    description: CIDR of the deployed network
     default: 10.0.0.0/24
 
 
