--- a/wordpress/wordpress_autoscale.yml
+++ b/wordpress/wordpress_autoscale.yml
@@ -21,7 +21,7 @@ parameters:
     description: flavor used by the dababase
     default: m1.small
 
-  flavor:
+  web_flavor:
     type: string
     description: flavor used by the web servers
     default: m1.small
@@ -119,7 +119,7 @@ resources:
       resource:
         type: https://raw.githubusercontent.com/gcharot/heat/master/wordpress/lb_server.yaml
         properties:
-            flavor: {get_param: flavor}
+            flavor: {get_param: web_flavor}
             image: {get_param: image}
             key_name: {get_param: key}
             pool_id: {get_resource: my_pool}
@@ -204,7 +204,8 @@ resources:
           template: |
             #!/bin/bash
             echo "$db_host db01 db01" >> /etc/hosts 
-            curl https://raw.githubusercontent.com/gcharot/heat/master/wordpress/backup_wordpress.sh -O /usr/local/bin/
+            yum -y install wget
+            wget https://raw.githubusercontent.com/gcharot/heat/master/wordpress/backup_wordpress.sh -O /usr/local/bin/backup_wordpress.sh
             chmod 755 /usr/local/bin/backup_wordpress.sh
           params:
             $db_host: {get_attr: [db01, first_address]}
